packages/isar_plus_generator/test/errors/id/missing.dart
// no id property defined

import 'package:isar_plus/isar.dart';

@collection
class Test {
  late int id;

  late String name;
}
